@@ -9,7 +9,7 @@
 ## X-Curse-Project-Name: oUF_CombatFeedback
 ## X-Curse-Project-ID: o-uf_combat-feedback
 ## X-Curse-Repository-ID: wow/o-uf_combat-feedback/mainline
-## X-Curse-Packaged-Version: v3.33-3-g1f483e3
+## X-Curse-Packaged-Version: v3.33-4-g283fb0d
 ## X-Curse-Project-Name: ElvUI
 ## X-Curse-Project-ID: elvui
 ## X-Curse-Repository-ID: wow/elvui/mainline
