@@ -3,7 +3,7 @@
 ## Notes: Raid debuff mod for oUF
 ## Version: 1.2
 ## OptionalDeps: oUF
-## X-Curse-Packaged-Version: v3.33-3-g1f483e3
+## X-Curse-Packaged-Version: v3.33-4-g283fb0d
 ## X-Curse-Project-Name: ElvUI
 ## X-Curse-Project-ID: elvui
 ## X-Curse-Repository-ID: wow/elvui/mainline
