@@ -1,5 +1,5 @@
 local E, L, P, G = unpack(select(2, ...)); --Inport: Engine, Locales, ProfileDB, GlobalDB
-local M = E:NewModule('Maps', 'AceHook-3.0', 'AceEvent-3.0');
+local M = E:NewModule('Maps', 'AceHook-3.0', 'AceEvent-3.0', 'AceTimer-3.0');
 
 E.Maps = M
 
